apps/homebox/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homebox
  labels:
    istio-injection: enabled
