apps/homebox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebox
  namespace: homebox
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - homebox.tmem.de
      secretName: homebox-tls
  rules:
    - host: homebox.tmem.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homebox
                port:
                  number: 7745
